<resources>
    <string name="app_name">Restro Drive</string>
    <!-- Strings related to login -->
    <string name="prompt_user_name">User Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Create my account</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="sign_in_with">Sign in with other account</string>
    <string name="sign_in_or">or</string>
    <string name="enter_valid_email">Please enter valid email</string>
    <string name="enter_valid_password">Please enter valid password</string>
    <string name="enter_valid_user_name">Please enter valid user name</string>

    <string name="sign_in_tab">Sign in</string>
    <string name="sign_up_tab">Create Account</string>
    <string name="login_shared_pref_key">com.android.mno.restrodrive.login_pref</string>
    <string name="shared_pref_auth_key">auth</string>
    <string name="google_sign_in_failed">Google sign in failed</string>
    <string name="title_activity_restaurantlist_view">RecyclerViewDemo</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Restro 1</string>
    <string name="slide_1_desc">The easiest way</string>

    <string name="slide_2_title">Restro 2</string>
    <string name="slide_2_desc">The easiest way</string>

    <string name="slide_3_title">Restro 3</string>
    <string name="slide_3_desc">The easiest way</string>

    <string name="slide_4_title">Restro 4</string>
    <string name="slide_4_desc">The easiest way</string>

    <string name="account">Account</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="sign_out">Sign Out</string>
    <string name="ok">ok</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_the_source">Enter the Source</string>
    <string name="enter_the_destination">Enter the Destination</string>
    <string name="find_route">Find Route</string>
</resources>
